--- a/index.html
+++ b/index.html
@@ -691,9 +691,9 @@
                 <span>Leader</span>
                 <div class="social">
                   <a href=""><i class="bi bi-twitter-x"></i></a>
-                  <a href="https://facebook.com/stephanie.felicilda"><i class="bi bi-facebook"></i></a>
+                  <a href="https://facebook.com/jacque.florita"><i class="bi bi-facebook"></i></a>
                   <a href="https://www.instagram.com/stephanie.felicilda"><i class="bi bi-instagram"></i></a>
-                  <a href="https://www.tiktok.com/@yourusername"><i class="bi bi-tiktok"></i></a>
+                  <a href="https://www.tiktok.com/jacque.florita"><i class="bi bi-tiktok"></i></a>
                 </div>
               </div>
             </div>
