--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
         </div>
       </div>
 
-      <div class="col-lg-6 menu-item isotope-item filter-specialty">
+      <div class="col-lg-6 menu-item isotope-item filter-starters">
         <img src="assets/img/menu/tuscan-grilled.jpg" class="menu-img" alt="">
         <div class="menu-content">
           <a href="#">Grilled Fish</a><span>₱310</span>
@@ -332,7 +332,7 @@
         </div>
       </div>
 
-      <div class="col-lg-6 menu-item isotope-item filter-salads">
+      <div class="col-lg-6 menu-item isotope-item filter-specialty">
         <img src="assets/img/menu/spinach-salad.jpg" class="menu-img" alt="">
         <div class="menu-content">
           <a href="#">Boodle</a><span>2,300</span>
