--- a/index.html
+++ b/index.html
@@ -1156,6 +1156,15 @@
   }
 </script>
 
+<!-- Floating Contact Channels -->
+<div id="contact-float">
+  <a href="https://m.me/stonecitygrill" target="_blank" class="contact-icon messenger" title="Chat via Messenger">
+    <i class="bi bi-messenger"></i>
+  </a>
+  <a href="tel:+63535680539" class="contact-icon phone" title="Tap to Call">
+    <i class="bi bi-telephone-fill"></i>
+  </a>
+</div>
 </body>
 
 </html>
