--- a/index.html
+++ b/index.html
@@ -1156,7 +1156,7 @@
   }
 </script>
 
-<!-- Floating Contact Channels -->
+<!-- Floating Contact Channels (Top-Left) -->
 <div id="contact-float">
   <a href="https://m.me/stonecitygrill" target="_blank" class="contact-icon messenger" title="Chat via Messenger">
     <i class="bi bi-messenger"></i>
