--- a/index.html
+++ b/index.html
@@ -84,9 +84,7 @@
         <div class="contact-info d-flex align-items-center">
           <i class="bi bi-phone d-flex align-items-center d-none d-lg-block"><span>+6353 568 0539</span></i>
           <i class="bi bi-clock ms-4 d-none d-lg-flex align-items-center"><span>Mon-Sun: 10:00 AM - 9:00 PM</span></i>
-        </div>
-        <a href="https://m.me/stonecitygrill" class="cta-btn">Message us</a>
-      </div>
+       
     </div><!-- End Top Bar -->
 
     <div class="branding d-flex align-items-cente">
@@ -1156,7 +1154,7 @@
   }
 </script>
 
-<!-- Floating Contact Channels (Top-Left, Horizontal) -->
+<!-- Floating Contact Channels (Top-Right, Horizontal) -->
 <div id="contact-float">
   <a href="https://m.me/stonecitygrill" target="_blank" class="contact-icon messenger" title="Chat via Messenger">
     <i class="bi bi-messenger"></i>
