--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             </li>
             <li><a href="#contact">Contact</a></li>
           </ul>
-          <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
+          <button class="mobile-nav-toggle d-xl-none bi bi-list"></button>
         </nav>
 
       </div>
