--- a/index.html
+++ b/index.html
@@ -1154,7 +1154,7 @@
   }
 </script>
 
-<!-- Floating Contact Channels (Top-Right, Horizontal) -->
+<!-- Floating Contact Channels (Top-Left, Horizontal) -->
 <div id="contact-float">
   <a href="https://m.me/stonecitygrill" target="_blank" class="contact-icon messenger" title="Chat via Messenger">
     <i class="bi bi-messenger"></i>
