--- a/index.html
+++ b/index.html
@@ -91,10 +91,8 @@
 
       <div class="container position-relative d-flex align-items-center justify-content-between">
         <a href="index.html" class="logo d-flex align-items-center">
-      
           <img src="assets/img/IMG_200.png" alt="">
-          <h2 class="sitename">Stone Grill Restaurant</h2>
-        </a>
+            <h3 class="sitename">Stone Grill Restaurant</h3></a>
 
         <nav id="navmenu" class="navmenu">
           <ul>
