--- a/index.html
+++ b/index.html
@@ -1152,7 +1152,6 @@
   }
 </script>
 
-<!-- Floating Contact Channels (Top-Right with Labels) -->
 <div id="contact-float">
   <a href="https://m.me/stonecitygrill" target="_blank" class="contact-icon messenger" title="Chat via Messenger">
     <i class="bi bi-messenger"></i>
@@ -1160,7 +1159,7 @@
   </a>
   <a href="tel:+63535680539" class="contact-icon phone" title="Tap to Call">
     <i class="bi bi-telephone-fill"></i>
-    <span class="contact-label">Call Us</span>
+    <span class="contact-label">Call</span>
   </a>
 </div>
 
