--- a/index.html
+++ b/index.html
@@ -1152,14 +1152,13 @@
   }
 </script>
 
+<!-- Floating Contact Channels (Top-Left, Horizontal) -->
 <div id="contact-float">
   <a href="https://m.me/stonecitygrill" target="_blank" class="contact-icon messenger" title="Chat via Messenger">
     <i class="bi bi-messenger"></i>
-    <span class="contact-label">Message</span>
   </a>
   <a href="tel:+63535680539" class="contact-icon phone" title="Tap to Call">
     <i class="bi bi-telephone-fill"></i>
-    <span class="contact-label">Call</span>
   </a>
 </div>
 
