--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
       <div class="container position-relative d-flex align-items-center justify-content-between">
         <a href="index.html" class="logo d-flex align-items-center">
-          <img src="assets/img/IMG_200.png" alt="">
+          <img src="assets/img/web-app-manifest-192x192.png" alt="">
             <h3 class="sitename">Stone Grill Restaurant</h3></a>
 
         <nav id="navmenu" class="navmenu">
