--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
   <meta name="keywords" content="Stone Grill Restaurant, Hilongos Leyte, Bato, sizzling food, seafood, boodle fight, Filipino food, family dining, restobar Leyte, grill restaurant">
   <meta name="author" content="Ninox Antolihao">
 
+  <meta property="og:title" content="Stone Grill Restaurant" />
+<meta property="og:description" content="Enjoyable and Relaxing — Try our Seafood Boodle, Crispy Pata, and more!" />
+<meta property="og:image" content="https://stonegrillresto.net/assets/img/IMG_127.jpeg" />
+<meta property="og:url" content="https://stonegrillresto.net" />
+<meta property="og:type" content="website" />
   <!-- Open Graph -->
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://stonegrillresto.net/">
