--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
             </li>
             <li><a href="#contact">Contact</a></li>
           </ul>
-          <button class="mobile-nav-toggle d-xl-none bi bi-list"></button>
+          <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
         </nav>
 
       </div>
