--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@
             <li><a href="#events">Catering</a></li>
             <li><a href="#chefs">STAFF</a></li>
             <li><a href="#gallery">Gallery</a></li>
-            <li><a href="#">Dropdown 1</a></li>
+            <li><a href="#dropdown">Dropdown</a></li>
               <ul>
-                <li class="dropdown"><a href="#"><span>Deep Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+                <li class="dropdown 1"><a href="#"><span>Deep Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
                   <ul>
                     <li><a href="#">Deep Dropdown 1</a></li>
                     <li><a href="#">Deep Dropdown 2</a></li>
