--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             <p>we will help you make lasting memories and to make it worth your time and taste..</p>
           <div>
               <a href="#menu" class="btn-get-started">Our Menu</a>
-              <a href="https://m.me/stonecitygrill" class="btn-get-started">Book a table</a>
+              <a href="https://forms.gle/WdzCDhZDSVW1wpZ57" class="btn-get-started">Your Order</a>
             </div>
           </div>
         </div>
