--- a/order/index.html
+++ b/order/index.html
@@ -35,17 +35,19 @@
         <input type="number" id="persons" name="persons" min="1">
       </div>
 
-      <label for="datetime">Pickup/Ready Time:</label>
+      <label for="datetime">DATE:     TIME:</label>
       <input type="datetime-local" id="datetime" name="datetime" required>
 
-      <label for="category">Select Category:</label>
+      <label for="category">Select MENU:</label>
       <select id="category" onchange="updateItems()" required>
-        <option value="">-- Select Category --</option>
-        <option value="pork">Pork</option>
-        <option value="chicken">Chicken</option>
-        <option value="vegetable">Vegetable</option>
-        <option value="noodles">Noodles</option>
-        <option value="fish">Fish</option>
+        <option value="">-- CHOOSE MENU --</option>
+        <option value="pork">PORK</option>
+        <option value="chicken">CHICKEN</option>
+        <option value="vegetable">VEGETABLES</option>
+        <option value="noodles">NOODLES</option>
+        <option value="rice">RICE</option>
+        <option value="beef">BEFF</option>
+        <option value="fish">FISH</option>
       </select>
 
       <div id="itemSelection" style="margin-top: 20px;"></div>
@@ -74,6 +76,16 @@
         { name: "Fried Chicken", price: 179 },
         { name: "Buffalo Wings", price: 189 },
         { name: "Grilled Chicken", price: 199 }
+      ],
+      rice: [
+        { name: "Cup Rice", price: 25 },
+        { name: "Platter Rice", price: 100 },
+        { name: "Stone Grill Fried Rice", price: 200 }
+      ],
+      beef: [
+        { name: "Beef Steak", price: 300 },
+        { name: "beef with Mushroom", price: 310 },
+        { name: "Beef Caldereta", price: 320 }
       ],
       vegetable: [
         { name: "Chopsuey", price: 159 },
