--- a/order/index.html
+++ b/order/index.html
@@ -67,6 +67,17 @@
 
   <script>
     const menuItems = {
+      set-meals: [
+        { name: "Set-A", price: 1,100 },
+        { name: "Set-B", price: 1000 },
+        { name: "Set_C", price: 1,980 }
+        { name: "Boodle", price: 2,300 }
+      ],
+      rice: [
+        { name: "Cup Rice", price: 25 },
+        { name: "Platter Rice", price: 100 },
+        { name: "Stone Grill Fried Rice", price: 200 }
+      ],
       pork: [
         { name: "Pork Sisig", price: 199 },
         { name: "Lechon Kawali", price: 229 },
