--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         <div class="carousel-item active">
           <img src="assets/IMG_0111.jpeg" alt="">
           <div class="carousel-container">
-            <h2><span></span></h2>
+            <h3><span></span></h3>
             <p>we will help you make lasting memories and to make it worth your time and taste..</p>
           <div>
               <a href="#menu" class="btn-get-started">Our Menu</a>
@@ -151,7 +151,7 @@
             <p>theres always a place for good food and warm hospitality.</p>
             <div>
               <a href="#menu" class="btn-get-started">Our Menu</a>
-              <a href="https://m.me/stonecitygrill" class="btn-get-started">Message Us</a>
+              <a href="https://stonegrillresto.net/order" class="btn-get-started">ORDER HERE</a>
             </div>
           </div>
         </div><!-- End Carousel Item -->
@@ -164,7 +164,7 @@
             <p>genuine hospitality makes each visit worthwhile.</p>
             <div>
               <a href="#menu" class="btn-get-started">Our Menu</a>
-              <a href="https://m.me/stonecitygrill" class="btn-get-started">Call Us</a>
+              <a href="https://stonegrillresto.net/order" class="btn-get-started">Order Here</a>
             </div>
           </div>
         </div><!-- End Carousel Item -->
