--- a/order/index.html
+++ b/order/index.html
@@ -46,7 +46,7 @@
         <option value="vegetable">VEGETABLES</option>
         <option value="noodles">NOODLES</option>
         <option value="rice">RICE</option>
-        <option value="beef">BEFF</option>
+        <option value="beef">BEEF</option>
         <option value="fish">FISH</option>
       </select>
 
@@ -88,10 +88,10 @@
         { name: "Buffalo Wings", price: 189 },
         { name: "Grilled Chicken", price: 199 }
       ],
-      rice: [
-        { name: "Cup Rice", price: 25 },
-        { name: "Platter Rice", price: 100 },
-        { name: "Stone Grill Fried Rice", price: 200 }
+      squid: [
+        { name: "Calamari", price: 25 310
+        { name: "sizzling squid sisig", price: 100 },
+        { name: "Adobo Spicy Squid", price: 200 }
       ],
       beef: [
         { name: "Beef Steak", price: 300 },
