--- a/order/index.html
+++ b/order/index.html
@@ -19,6 +19,8 @@
     .add-btn:hover {background:#aa1818;}
     .qty-btn {padding:2px 7px;}
     .cart-total {font-weight:bold; margin-top:8px;}
+    .selectable-item {transition: background 0.15s, color 0.15s;}
+    .selectable-item.selected {background:#b22222 !important; color:#fff !important; font-weight:bold;}
   </style>
 </head>
 <body>
@@ -60,6 +62,7 @@
       </select>
 
       <div id="itemSelection" style="margin-top: 20px;"></div>
+      <button type="button" id="addSelectedBtn" style="margin-bottom:10px;">Add Selected</button>
 
       <h3>Ordered Items:</h3>
       <div id="cartItems"></div>
@@ -78,7 +81,6 @@
   </div>
 
   <script>
-    // PALITAN at dagdagan ang items dito kung gusto mo pa!
     const menuItems = {
       pork: [
         { name: "Pork Sisig", price: 199 },
@@ -118,6 +120,7 @@
     };
 
     let cart = [];
+    let selectedItems = [];
 
     function togglePersons() {
       const orderType = document.getElementById("orderType").value;
@@ -128,42 +131,62 @@
       const category = document.getElementById("category").value;
       const itemDiv = document.getElementById("itemSelection");
       itemDiv.innerHTML = "";
-
+      selectedItems = [];
       if (menuItems[category]) {
         menuItems[category].forEach((item, index) => {
-          const btnId = `${category}-${index}`;
           const row = document.createElement("div");
-          row.style.marginBottom = "12px";
-          row.innerHTML = `
-            <label>${item.name} (₱${item.price})</label>
-            <button type="button" class="add-btn" onclick="addToCart('${category}', ${index})">Add</button>
-          `;
+          row.className = "selectable-item";
+          row.style.border = "1px solid #ccc";
+          row.style.padding = "10px";
+          row.style.marginBottom = "8px";
+          row.style.borderRadius = "6px";
+          row.style.cursor = "pointer";
+          row.innerHTML = `<span>${item.name} (₱${item.price})</span>`;
+          row.onclick = function() {
+            toggleHighlight(row, category, index);
+          };
           itemDiv.appendChild(row);
         });
       }
     }
 
-    function addToCart(category, index) {
-      const item = menuItems[category][index];
-      const cartIndex = cart.findIndex(
-        (ci) => ci.name === item.name && ci.price === item.price
-      );
-      if (cartIndex >= 0) {
-        cart[cartIndex].qty += 1;
+    function toggleHighlight(row, category, index) {
+      const key = category + '-' + index;
+      const selIndex = selectedItems.indexOf(key);
+
+      if (selIndex >= 0) {
+        // Unselect
+        selectedItems.splice(selIndex, 1);
+        row.classList.remove("selected");
       } else {
-        cart.push({ ...item, qty: 1 });
+        // Select
+        selectedItems.push(key);
+        row.classList.add("selected");
       }
-      renderCart();
     }
+
+    // Add to Cart button logic
+    document.getElementById("addSelectedBtn").onclick = function() {
+      const category = document.getElementById("category").value;
+      if (menuItems[category]) {
+        selectedItems.forEach(key => {
+          const [cat, idx] = key.split('-');
+          const item = menuItems[cat][parseInt(idx)];
+          if (!cart.some(ci => ci.name === item.name && ci.price === item.price)) {
+            cart.push({ ...item, qty: 1 });
+          }
+        });
+      }
+      selectedItems = [];
+      // Remove all highlights
+      document.querySelectorAll('.selectable-item').forEach(row => {
+        row.classList.remove("selected");
+      });
+      renderCart();
+    };
 
     function removeFromCart(idx) {
       cart.splice(idx, 1);
-      renderCart();
-    }
-
-    function changeQty(idx, delta) {
-      cart[idx].qty += delta;
-      if (cart[idx].qty <= 0) cart.splice(idx, 1);
       renderCart();
     }
 
@@ -180,12 +203,7 @@
           row.className = "cart-row";
           row.innerHTML = `
             <span>${item.name} (₱${item.price})</span>
-            <div>
-              <button type="button" class="qty-btn" onclick="changeQty(${idx},-1)">-</button>
-              <span>${item.qty}</span>
-              <button type="button" class="qty-btn" onclick="changeQty(${idx},1)">+</button>
-              <button type="button" class="qty-btn" onclick="removeFromCart(${idx})">🗑️</button>
-            </div>
+            <button type="button" class="qty-btn" onclick="removeFromCart(${idx})">🗑️</button>
           `;
           cartDiv.appendChild(row);
         });
@@ -196,11 +214,10 @@
     document.getElementById("fullOrderForm").addEventListener("submit", function(e) {
       e.preventDefault();
       if(cart.length===0){
-        alert("Please add at least one item to your order.");
+        alert("Please select at least one menu item.");
         return;
       }
 
-      // Collect all form data
       const data = {
         name: document.getElementById("name").value,
         mobile: document.getElementById("mobile").value,
@@ -212,8 +229,7 @@
         total: document.getElementById("dropdownTotal").textContent
       };
 
-      // SEND DATA TO GOOGLE SHEETS (via Apps Script Web App)
-      fetch("https://script.google.com/macros/s/AKfycbxZkhKvjGiIPsBTCh4rxfPgmXHJXrj57aHqhz7PvibYAFWHZ5LdaBzuv5RFl0oZQRK_/exec", {   // <-- Palitan mo ito ng sariling Web App URL mo!
+      fetch("YOUR_WEB_APP_URL_HERE", { // Palitan ng Web App URL mo
         method: "POST",
         mode: "no-cors",
         headers: {"Content-Type": "application/json"},
@@ -245,9 +261,13 @@
       document.getElementById("fullOrderForm").reset();
       cart = [];
       renderCart();
+      // Remove all highlights (reset style)
+      document.querySelectorAll('.selectable-item').forEach(row => {
+        row.classList.remove("selected");
+      });
     });
 
-    // Initialize empty cart display
+    // Initialize
     renderCart();
   </script>
 </body>
