--- a/order/index.html
+++ b/order/index.html
@@ -229,7 +229,7 @@
         total: document.getElementById("dropdownTotal").textContent
       };
 
-      fetch("YOUR_WEB_APP_URL_HERE", { // Palitan ng Web App URL mo
+      fetch("https://script.google.com/macros/s/AKfycbwjRJAIe58Z54NVN9GI0Lpa09Us8erQDmV69gTRLzPAg9OdCTmMwp73wWpbrxeV8WDY/exec", { // Palitan ng Web App URL mo
         method: "POST",
         mode: "no-cors",
         headers: {"Content-Type": "application/json"},
